[+] Some amendments to the tests